--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple react boilerplate for single page applications. ",
   "main": "index.js",
   "scripts": {
-    "build": "webpack -d --watch",
+    "build": "webpack --config prod.config.js --watch",
+    "dev": "webpack --config dev.config.js --watch",
     "start": "nodemon server/index.js"
   },
   "repository": {
@@ -20,7 +21,10 @@
   "devDependencies": {
     "@babel/cli": "^7.7.5",
     "@babel/core": "^7.7.5",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-export-default-from": "^7.5.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/polyfill": "^7.7.0",
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-react": "^7.7.4",
@@ -28,8 +32,11 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^2.1.1",
     "dotenv": "^6.2.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
     "file-loader": "^3.0.1",
     "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^1.1.2",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
